# loglib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
loglib/: CMakeLists.txt  manager.cpp  manager.h  record.cpp  record.h  stoppable_worker.cpp  stoppable_worker.h  worker.cpp  worker.h
