set(ID test_loglib_project)
project(${ID} CXX)

set(TOP_SRS_DIR ${PROJECT_SOURCE_DIR})
set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BIN_DIR})
link_directories(${BIN_DIR})

add_subdirectory(loglib)
add_subdirectory(demo)
